--- a/configs/model/network/head/multi_task.yaml
+++ b/configs/model/network/head/multi_task.yaml
@@ -1,6 +1,6 @@
 target_key: gps
 final_dim:  2
 instance:
-  _target_: models.networks.heads.aux.AuxHead
+  _target_: models.networks.heads.auxilliary.AuxHead
   aux_data: ${aux_data}
   use_tanh: true
