--- a/configs/dataset/osv5m.yaml
+++ b/configs/dataset/osv5m.yaml
@@ -3,13 +3,13 @@ defaults:
   - test_transform: fast_clip
   - _self_
 
-name: OpenWorld_new
+name: osv5m
 global_batch_size: 256
 
 train_dataset:
   _partial_: true
-  _target_: data.data.OpenWorld
-  path: ${data_dir}/OpenWorld/
+  _target_: data.data.osv5m
+  path: ${data_dir}/osv5m/
   split: train
   class_name: ${class_name}
   transforms: ${dataset.train_transform}
@@ -21,8 +21,8 @@ train_dataset:
 
 val_dataset:
   _partial_: true
-  _target_: data.data.OpenWorld
-  path: ${data_dir}/OpenWorld/
+  _target_: data.data.osv5m
+  path: ${data_dir}/osv5m/
   split: val
   class_name: ${class_name}
   transforms: ${dataset.test_transform}
@@ -34,8 +34,8 @@ val_dataset:
 
 test_dataset:
   _partial_: true
-  _target_: data.data.OpenWorld
-  path: ${data_dir}/OpenWorld/
+  _target_: data.data.osv5m
+  path: ${data_dir}/osv5m/
   split: test
   class_name: ${class_name}
   transforms: ${dataset.test_transform}
