--- a/configs/exp/contrastive_region.yaml
+++ b/configs/exp/contrastive_region.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 
 defaults:
-  - override /dataset: openworld_contrastive
+  - override /dataset: osv5m_contrastive
   - override /model: regression
   - override /model/network: contrastive_unfrozen_backbone
   - override /model/network/backbone: openclip_B_32
